[gd_scene load_steps=5 format=2]

[ext_resource path="res://Location_Astral_Dungeon/scripts7/MenuDungeon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Circle_blurred.png" type="Texture" id=2]
[ext_resource path="res://Assets/Wizard/Wizard0.png" type="Texture" id=3]
[ext_resource path="res://Assets/Music/menu.ogg" type="AudioStream" id=4]

[node name="MenuDungeon" type="Node2D"]
script = ExtResource( 1 )

[node name="Play" type="TextureButton" parent="."]
margin_left = 765.0
margin_top = 405.0
margin_right = 1165.0
margin_bottom = 505.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Play"]
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Play"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 24.0
text = "PLAY GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="."]
margin_left = 765.0
margin_top = 625.0
margin_right = 1165.0
margin_bottom = 725.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Quit"]
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Quit"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 24.0
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SOULS" type="Label" parent="."]
margin_left = 14.0
margin_top = 164.0
margin_right = 60.0
margin_bottom = 178.0
rect_scale = Vector2( 3, 3 )
text = "SOULS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Monstr" type="Label" parent="."]
margin_left = 300.0
margin_top = 164.0
margin_right = 417.0
margin_bottom = 178.0
rect_scale = Vector2( 3, 3 )
text = "LIVE MONSTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EliteMonstr" type="Label" parent="."]
margin_left = 700.0
margin_top = 164.0
margin_right = 752.0
margin_bottom = 178.0
rect_scale = Vector2( 3, 3 )
text = "LIVE ELITE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BOSS" type="Label" parent="."]
margin_left = 1367.0
margin_top = 164.0
margin_right = 1435.0
margin_bottom = 178.0
rect_scale = Vector2( 3, 3 )
text = "BOSS: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 1005.0
margin_top = 164.0
margin_right = 1085.0
margin_bottom = 178.0
rect_scale = Vector2( 3, 3 )
text = "YOUR LEVEL:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 1005.0
margin_top = 385.0
margin_right = 1182.0
margin_bottom = 445.0
text = "ENTER TO ASTRAL WORLD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_QUIT" type="Button" parent="."]
margin_left = 1045.0
margin_top = 595.0
margin_right = 1145.0
margin_bottom = 655.0
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="Label" parent="."]
visible = false
margin_left = 500.0
margin_top = 20.0
margin_right = 730.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
text = "CONGRATULATION! YOUR RESULT:"

[node name="HotKey" type="Label" parent="."]
margin_left = 16.0
margin_top = 800.0
margin_right = 650.0
margin_bottom = 850.0
rect_scale = Vector2( 3, 3 )
text = "HotKey: WASD-movement character. Space - Spell \"Ultimate\" (5sec).
Q - Spell \"Fire Trap\" (20sec). E - Spell \"Mirror Double\" (5sec,  -HP).
ALT - Spell \"Tree of safe\" (Cooldown 5 sec). Escape - Menu. Mouse - look to target"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
margin_left = 16.0
margin_top = 1000.0
margin_right = 364.0
margin_bottom = 1014.0
rect_scale = Vector2( 3, 3 )
text = "Worlds and Gods . Level - Astral Dungeon v 0.016 17.09.2023"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button_QUIT" to="." method="_on_Button_QUIT_pressed"]
